# Revision history for Perl module Task::Unicode
---
version: 0.05_1
date:    XXX
changes:
  - Added Unicode::Casing module
---
version: 0.05
date:    2012-04-15
changes:
  - Added Unicode::Util module
---
version: 0.04
date:    2012-04-11
changes:
  - Added Unicode::Regex::Set module
---
version: 0.03
date:    2012-03-05
changes:
  - Added Unicode::CaseFold module
---
version: 0.02
date:    2012-01-23
changes:
  - Fixed bug preventing Unicode::Tussle inclusion on Perl 5.14+
  - Added links to the modules in the SEE ALSO section
---
version: 0.01
date:    2012-01-22
changes:
  - First release